k8s/frontend/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    app: frontend
