k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  type: type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
